# weathrly

./: Cargo.toml  LICENSE  README.md
src/: api.rs  main.rs
src/commands/: mod.rs  predict.rs  today.rs
