[package]
name = "weathrly"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.30", features = ["serde"] }
clap = { version = "4.4.2", features = ["derive"] }
reqwest = { version = "0.11.20", features = ["json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
serde_repr = "0.1.16"
tabled = "0.14.0"
tokio = { version = "1.32.0", features = ["full"] }
